@@ -68,6 +68,11 @@ allOpen {
 
 tasks.withType<Test> {
     useJUnitPlatform()
+    jvmArgs(
+        "--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED",
+        "--add-opens", "java.base/java.lang=ALL-UNNAMED",
+        "--add-opens", "java.base/java.nio.file=ALL-UNNAMED"
+    )
 }
 
 sourceSets["main"].java.srcDirs("${layout.buildDirectory.get().asFile}/generated/source/kapt/main")
